<resources>
    <string name="app_name">SSA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="animation_description">splash screen animation</string>
    <string name="query_hint">Address,City,State,Zip</string>
    <string name="login">Login</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="skip_login">Skip</string>
    <string name="register_button">Register</string>
    <string name="admin_signin_option">Admin signin option</string>
    <string name="logo_banner">logo banner</string>

    <string name="title_favorite">Saved Homes</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_loan_calculator">Loan Calculator</string>
    <string name="settings_title_preference">Preference</string>
    <string name="title_theme">Theme</string>
    <string name="title_contact">Contact</string>
    <string name="title_welcome_back">Welcome Back</string>
    <string name="login_username_email">Username/Email</string>
    <string name="login_password">Password</string>
    <string name="remember_me_checkbox">Remember Me</string>
    <string name="forgot_password_clickable">Forgot Password?</string>
    <string name="login_submit_button">Login</string>

</resources>