<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@drawable/background_main"
    android:id="@+id/mainActivity"
    >




    <include
        android:id="@+id/login_pop_up"
        layout="@layout/pop_up_log_in_dialog"
        android:layout_width="275dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/admin_login"
        android:layout_width="30dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/baseline_admin_panel_settings_24"
        android:clickable="true"
        android:contentDescription="@string/admin_signin_option"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/logo_banner"
        android:src="@drawable/ajbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/custom_button_login_screen"
        android:text="@string/login"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/google_signIn"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button_login_screen"
        android:drawableStart="@drawable/icons8_google"
        android:drawablePadding="-20dp"
        android:paddingStart="3dp"
        android:paddingEnd="0dp"
        android:text="@string/google_sign_in"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button_login_screen"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/skip_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:text="@string/skip_login"
        android:textColor="@color/white"
        android:textSize="19.5sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_signIn"
        android:focusable="true" />


</androidx.constraintlayout.widget.ConstraintLayout>